########################
# Current Developments #
########################

(Work toward next release. Currently under development.)

ADDED:

  * Added additional arguments to the callback function for ajaxrequest in the
    default handler.

CHANGED:

  * Suppressed some warnings coming from BeautifulSoup.

DEPRECATED:

REMOVED:

FIXED:

  * Fixed a crash from "render_escaped_dollar" method not existing (triggered
    by mistletoe update?)

  * Fixed multiple issues with "-c" flag and "CATSOOP_CONFIG" environment
    variable

  * Fixed incorrect help text with "catsoop logedit" command

  * Fixed an old bug where submitting an asynchronously-checked question while
    another submission is queued for that same question caused confused results
    to be displayed

SECURITY:

DOCUMENTATION:


####################
# Version 2022.9.0 #
####################

ADDED:

  * Added cs_log_lock_location to control where locks for log files are written

  * Added csq_renderer option to pythonic qtype, to allow choosing between
    bigbox and smallbox renderers

  * The pythonic qtype now respects the csq_check_function variable (which can
    still be overridden by specifying check functions for individual tests)

  * Questions with a "Check" button now have a "Revert to Prior Submission"
    button

  * Added cs_wsgi_server_worker_max_requests option to provide --max-requests
    option to uWSGI, to force workers to be killed and restarted after that
    many requests

CHANGED:

  * cs_local_python_import now raises a more meaningful exception when the
    given filename is incorrect

  * Replaced hacky import mechanism for custom question types with access to
    cs_local_python_import

  * Questions with a "Check" button no longer also have a "Save" button

  * Added error reporting on failed <include> tags

  * Changed default message for when users are not logged in

DEPRECATED:

REMOVED:

  * tutor.init_random now uses randomly-generated random seeds again

FIXED:
